# deferred-pbr

./: .atom-build.json  .gitignore  CMakeLists.txt  README.md  deferred.todo
src/: assets.cpp  assets.h  common.cpp  common.h  container.h  debug_lines.cpp  debug_lines.h  deferred.c  deferred.cpp  deferred.h  forward.c  forward.cpp  forward.h  gbuffer.c  gbuffer.cpp  gbuffer.h  gui.cpp  gui.h  ibl.cpp  ibl.h  light.cpp  light.h  main.c  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  particles.c  particles.cpp  particles.h  physics.cpp  physics.h  physics_particles.cpp  physics_particles.h  physics_rigidbodies.cpp  physics_rigidbodies.h  renderer.cpp  renderer.h  scene.c  (+9 more)
src/imgui/: ImGuizmo.cpp  ImGuizmo.h  imgui.cpp  imgui_custom_theme.cpp  imgui_custom_theme.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl_gl3.cpp  imgui_widgets.cpp  imstb_truetype.h
src/tinyobj_loader_c/: tinyobj_loader_c.c  tinyobj_loader_c.h
tools/ibl-baker/: CMakeLists.txt  cubemap.cpp  cubemap.h  ibl-baker.cpp  ibl-baker.h  ibl.cpp  ibl.h  main.cpp
